SSS issues - part two #46908

Closed
opened 2015-12-01 21:06:03 +01:00 by Mohammad Eideh · 5 comments

System Information
Win 7 64bit - Nvidia GTX 780 Ti

Blender Version
Broken: 2.76.2 520feda
Worked: 2.76b official

So I did some further testing with the latest build to check the latest SSS changes. Here are some more issues I've found:

  • SSS Reflections on other objects are black.
  • Render times seem to be slightly slower. This looks to be related to the world Multiple Importance Sampling setting. Disable it and times are on par with the latest build, even slightly faster. Buy hey, seeing the memory savings (~1GB VRAM in one scene), I'm not complaining. :)
  • Viewport rendering: A single SSS object seem fine but when adding multiple ones they will look weird in the preview render.

Screenies to display the reflections issue, render times and viewport problem.

2.76b official render:
official_render.jpg

2.76.2 520feda render...notice the reflections on Torus:
exp_render.jpg

2.76b official viewport:
official_viewport.jpg

2.76.2 520feda viewport:
exp_viewport.jpg

Exact steps for others to reproduce the error
sss_suzanne.blend
Points described above should be sufficient.

**System Information** Win 7 64bit - Nvidia GTX 780 Ti **Blender Version** Broken: 2.76.2 520feda Worked: 2.76b official So I did some further testing with the latest build to check the latest SSS changes. Here are some more issues I've found: - SSS Reflections on other objects are black. - Render times seem to be slightly slower. This looks to be related to the world Multiple Importance Sampling setting. Disable it and times are on par with the latest build, even slightly faster. Buy hey, seeing the memory savings (~1GB VRAM in one scene), I'm not complaining. :) - Viewport rendering: A single SSS object seem fine but when adding multiple ones they will look weird in the preview render. Screenies to display the reflections issue, render times and viewport problem. 2.76b official render: ![official_render.jpg](https://archive.blender.org/developer/F261837/official_render.jpg) 2.76.2 520feda render...notice the reflections on Torus: ![exp_render.jpg](https://archive.blender.org/developer/F261839/exp_render.jpg) 2.76b official viewport: ![official_viewport.jpg](https://archive.blender.org/developer/F261842/official_viewport.jpg) 2.76.2 520feda viewport: ![exp_viewport.jpg](https://archive.blender.org/developer/F261844/exp_viewport.jpg) **Exact steps for others to reproduce the error** [sss_suzanne.blend](https://archive.blender.org/developer/F261847/sss_suzanne.blend) Points described above should be sufficient.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quacker

Added subscriber: @quacker
Sergey Sharybin self-assigned this 2015-12-01 22:10:51 +01:00

Fixed the issue which happens in the viewport. Was a mistake in the cases when BVH has object instances. Could have happen in final render as well.

Still working on the reflections issue.

Fixed the issue which happens in the viewport. Was a mistake in the cases when BVH has object instances. Could have happen in final render as well. Still working on the reflections issue.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Commited remaining fixes at d0a9ec5. Think now this report is fully handled.

So thanks for the report, closing it as resolved now!

Commited remaining fixes at d0a9ec5. Think now this report is fully handled. So thanks for the report, closing it as resolved now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46908
No description provided.