Cycles: Fix SSS object not properly reflected in glossy object with indirect clamping

This fixes remained issues reported in T46908.