intern/cycles/kernel/kernel_path.h
@@ -497,6 +497,9 @@ ccl_device bool kernel_path_subsurface_scatter(
 			hit_state->rng_offset += PRNG_BOUNCE_NUM;
 
 			path_radiance_init(hit_L, kernel_data.film.use_light_pass);
+			hit_L->direct_throughput = L->direct_throughput;
+			path_radiance_copy_indirect(hit_L, L);
+
 			kernel_path_surface_connect_light(kg, rng, sd, *hit_tp, state, hit_L);
 
 			if(kernel_path_surface_bounce(kg,
@@ -524,7 +527,7 @@ ccl_device bool kernel_path_subsurface_scatter(
 					    hit_state->volume_stack);
 				}
 #endif
-
+				path_radiance_reset_indirect(L);
 				ss_indirect->num_rays++;
 			}
 			else {
